--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <script src="https://kit.fontawesome.com/5499f90718.js" crossorigin="anonymous"></script>
   <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <title>Amazan</title>
 </head>
